--- a/client/views/admin/elections/electionsAdminModify.html
+++ b/client/views/admin/elections/electionsAdminModify.html
@@ -77,7 +77,7 @@
                   <label for="allow-abstain" class="pure-checkbox">
                   <input id="allow-abstain" name="questionAllowAbstain"
                         class="question allowAbstain" type="checkbox"
-                        checked="{{allowAbstain}}">
+                        checked="{{allowAbstain}}" data-questionId={{_id}}>
                     Allow Abstention</label>
                   <div class="pure-controls">
                     <h4>Voting Mode</h4>
