fixed bug with groups not being saved and choice descriptions not persisting

--- a/client/views/admin/elections/electionsAdminModify.html
+++ b/client/views/admin/elections/electionsAdminModify.html
@@ -129,7 +129,7 @@
                         name="choiceDescription" class="pure-input-1-2 choice
                         description" type="text" placeholder="Choice
                         Description"
-                        >Description</textarea>
+                        >{{description}}</textarea>
                   </div>
                   <div class="pure-control-group">
                     <label for="choice-{{_id}}-url">Image url</label>
