--- a/client/views/admin/groups/groupsAdminCreate.html
+++ b/client/views/admin/groups/groupsAdminCreate.html
@@ -13,7 +13,7 @@
           <input id="groupName" class="new group name" type="text" placeholder="Name">
           <label for="groupDescription" class="text-muted">Group Description </label>
           <input id="groupDescription" class="new group description" type="text" placeholder="Group Description">
-          <label for="groupAdmins" class="text-muted">Group Description </label>
+          <label for="groupAdmins" class="text-muted">Group Admins </label>
           <textarea id="groupAdmins" rows="5" class="new group admins">netId&#10;netId&#10;netId</textarea>
           <label for="groupNetIds" class="text-muted">Group NetIds </label>
           <textarea id="groupNetIds" rows="20" class="new group netids">netId&#10;netId&#10;netId</textarea>
