--- a/client/views/voter/includes/about.html
+++ b/client/views/voter/includes/about.html
@@ -5,20 +5,20 @@
       <div class="centered-container">
         <h1>
           <a href="{{pathFor 'home'}}">
-            NYU Vote
+            Student Vote
           </a>
         </h1>
         <p class="login-caption">
-          NYU Vote is an open source live voting platform designed to be the
+          Student Vote is an open source live voting platform designed to be the
           union of capability and simplicity. It has an ultra simple
           user-facing ballot interface, as well as a minimilistic admin
-          interface. Along with this, NYU Vote features a rich suite of
+          interface. Along with this, Student Vote features a rich suite of
           features, such as live results display, data isolation, data
           privacy, fine grained voting rule control, extensibility and tight
           security.
           </p><br/>
         <p class="login-caption">
-          NYU Vote is freely available to any member of the NYU community. Just
+          Student Vote is freely available to any member of the NYU community. Just
           get in touch with a member of the team.
           </p><br/>
         <p class="login-caption">
@@ -35,8 +35,8 @@
           Our code is on <a class="light-grey" href="http://github.com/hackAD/nyu-vote"
             alt="github">github.</a><br/><br/>
           This project is part of the <a href="http://nyuapps.com"
-            alt="NYUApps">NYUApps intiative</a>. The developers are all part
-          of the hackAD group in NYU Abu Dhabi. The project was sponsored by
+            alt="NYUApps">NYUApps intiative</a>. The developers are all based
+          in NYU Abu Dhabi. The project was sponsored by
           NYU SSC.
         </p>
         <a class="large-button" href="{{pathFor 'home'}}">
