Added help text

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -55,6 +55,10 @@ body
 .current
 	border: solid 1px black
 
+.info-link
+	font-weight: 600 !important
+	color: #ffffff !important
+
 #container
 	color: white
 	background-color: darkest-blue
