--- a/client/views/voter/includes/about.html
+++ b/client/views/voter/includes/about.html
@@ -18,8 +18,8 @@
           security.
           </p><br/>
         <p class="login-caption">
-          Student Vote is freely available to any member of the NYU community. Just
-          get in touch with a member of the team.
+          If you would like access to the Student Vote platform, please contact:<br/>
+          <a class="light-grey info-link" href="mailto:studentgov.elections@nyu.edu">studentgov.elections@ynu.edu</a>
           </p><br/>
         <p class="login-caption">
         <span class="bold">Development Team </span><br />
@@ -33,15 +33,11 @@
           </p><br />
         <p class="login-caption">
           Our code is on <a class="light-grey" href="http://github.com/hackAD/nyu-vote"
-            alt="github">github.</a><br/><br/>
-          This project is part of the <a href="http://nyuapps.com"
-            alt="NYUApps">NYUApps intiative</a>. The developers are all based
-          in NYU Abu Dhabi. The project was sponsored by
-          NYU SSC.
+            alt="github">github.</a>
+          <a class="large-button" href="{{pathFor 'home'}}">
+            Home
+          </a>
         </p>
-        <a class="large-button" href="{{pathFor 'home'}}">
-          Home
-        </a>
       </div>
     </div>
   </div>
