Added help button to all pages

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -94,7 +94,10 @@ body
 		a
 			color light-grey
 			position absolute
+		.header-exit
 			left 20px
+		.header-help
+			right 20px
 	.body-text
 		font-family: lato
 		text-transform: none
