--- a/client/views/voter/includes/help.html
+++ b/client/views/voter/includes/help.html
@@ -16,8 +16,8 @@
           support team at:<br/>
           <a class="light-grey info-link" href="mailto:studentgov.elections@nyu.edu">studentgov.elections@ynu.edu</a>
           </p><br/>
-        <a class="large-button" href="{{pathFor 'home'}}">
-          Home
+        <a class="large-button" href="#" onclick="window.history.back()">
+          Back
         </a>
       </div>
     </div>
