fixed email typo

--- a/client/views/voter/includes/about.html
+++ b/client/views/voter/includes/about.html
@@ -19,7 +19,7 @@
           </p><br/>
         <p class="login-caption">
           If you would like access to the Student Vote platform, please contact:<br/>
-          <a class="light-grey info-link" href="mailto:studentgov.elections@nyu.edu">studentgov.elections@ynu.edu</a>
+          <a class="light-grey info-link" href="mailto:studentgov.elections@nyu.edu">studentgov.elections@nyu.edu</a>
           </p><br/>
         <p class="login-caption">
         <span class="bold">Development Team </span><br />
