--- a/client/views/voter/includes/help.html
+++ b/client/views/voter/includes/help.html
@@ -14,7 +14,7 @@
         <p class="login-caption">
           If you are experiencing trouble with any part of Student Vote, you can reach out to the
           support team at:<br/>
-          <a class="light-grey info-link" href="mailto:studentgov.elections@nyu.edu">studentgov.elections@ynu.edu</a>
+          <a class="light-grey info-link" href="mailto:studentgov.elections@nyu.edu">studentgov.elections@nyu.edu</a>
           </p><br/>
         <a class="large-button" href="#" onclick="window.history.back()">
           Back
