--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -135,6 +135,42 @@ body
 		background-color: rgba(255,255,255,0.4)
 		cursor: pointer
 
+//Dropdown button
+.dropdown
+	position: relative
+	display: inline-block
+
+.dropbtn
+	background-color: #4CAF50
+	color: white
+	padding: 16px
+	font-size: 16px
+	border: none
+	cursor: pointer
+	&:hover
+		background-color: #3e8e41
+	&:focus
+		background-color: #3e8e41
+
+.dropdown-content
+	display: none
+	position: absolute
+	background-color: #f9f9f9
+	min-width: 160px
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2)
+	a
+		color: black
+		padding: 12px 16px
+		text-decoration: none
+		display: block
+		&:hover
+			background-color: #f1f1f1
+
+.show
+	display: block
+
+
+
 //ABOUT SCREEN
 #about-screen
 	.light-grey
