Fixed ballot review page

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -207,9 +207,9 @@ body
 	background-size: cover
 	background-position: center
 	background-repeat: no-repeat
-	.small
-		height: 100px
-		width: 100px
+.small
+	height: 125px
+	width 125px
 #voting-screen
 	padding-bottom 140px
 	.centered-container
