minor fixes and revisions

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -134,8 +134,6 @@ body
 	&:hover
 		background-color: rgba(255,255,255,0.4)
 		cursor: pointer
-.taken
-	background-color: light-grey
 
 //ABOUT SCREEN
 #about-screen
@@ -207,7 +205,7 @@ body
 	background-size: cover
 	background-position: center
 	background-repeat: no-repeat
-.small
+.small-image
 	height: 125px
 	width 125px
 #voting-screen
