--- a/client/views/admin/elections/electionsAdminResults.html
+++ b/client/views/admin/elections/electionsAdminResults.html
@@ -26,6 +26,7 @@
         </table>
         <h2>Questions</h2>
         {{#each questions}}
+          {{getRankResults _id true}}
           <table class="pure-table pure-table-horizontal">
             <thead>
                 <tr><td>Name</td><td>{{name}}</td></tr>
@@ -35,7 +36,14 @@
                 {{#each choices}}
                   <tr class="pure-table-odd"><td>Name</td><td>{{name}}</td></tr>
                   <tr><td>Description</td><td>{{description}}</td></tr>
-                  <tr><td>Votes</td><td>{{votes _id ../_id ../../votes }}</td></tr>
+                  {{#if isPick ../_id}}
+                    <tr><td>Votes</td><td>{{votes _id ../_id ../../votes }}</td></tr>
+                  {{/if}}
+                  {{#if isRank ../_id}}
+                    {{#each getRankResults ../_id false}}
+                      <tr><td>Round {{getRankRound}}:</td><td>{{getRankVotes ../_id}}</td></tr>
+                    {{/each}}
+                  {{/if}}
                 {{/each}}
                 {{#if allowAbstain}}
                   <tr class="pure-table-odd"><td>Name</td><td>Abstain</td></tr>
