--- a/client/views/admin/elections/electionsAdminResults.html
+++ b/client/views/admin/elections/electionsAdminResults.html
@@ -24,9 +24,13 @@
             <tr><td>Description</td><td>{{description}}</td></tr>
           </tbody>
         </table>
+        <div>
+          <h2>Refresh results</h2>
+          <p>If you are running a rank election the results on the rank questions are not live, they are only refreshed by clicking the button below. All pick elections have live rankings though</p>
+          <a class="large-button" onClick={{getRankResults false false}}>Refresh Rank Results</a>
+        </div>
         <h2>Questions</h2>
         {{#each questions}}
-          {{getRankResults _id true}}
           <table class="pure-table pure-table-horizontal">
             <thead>
                 <tr><td>Name</td><td>{{name}}</td></tr>
@@ -40,8 +44,8 @@
                     <tr><td>Votes</td><td>{{votes _id ../_id ../../votes }}</td></tr>
                   {{/if}}
                   {{#if isRank ../_id}}
-                    {{#each getRankResults ../_id false}}
-                      <tr><td>Round {{getRankRound}}:</td><td>{{getRankVotes ../_id}}</td></tr>
+                    {{#each getRankResults _id ../_id}}
+                      <tr><td>Round {{round}}:</td><td>{{votesNumber}}</td></tr>
                     {{/each}}
                   {{/if}}
                 {{/each}}
