change color of abstain and add confirm popup

--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -41,6 +41,10 @@ body
 	background-color green
 .incomplete-bg
 	background-color: #F0B1B4
+.abstain-header-bg
+	background-color #915591
+.abstain-bg
+	background-color #b757b7
 
 .header
 	line-height: 20px
@@ -74,7 +78,7 @@ body
 		width: 100%
 		padding-bottom: 30px
 		margin 0
-	h2 
+	h2
 		font-size: 2.5em
 		margin 0 auto
 	h3
@@ -182,7 +186,7 @@ body
 		padding 0
 		height: 30px
 		margin-right: 20px
-		
+
 .centered-container
 	max-width 800px
 	margin 0 auto
