--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -214,6 +214,10 @@ body
 	width 125px
 #voting-screen
 	padding-bottom 140px
+
+	#options-message
+		font-size 1.1em
+
 	.centered-container
 		padding 20px 20px
 	//Just for the header description
