--- a/client/stylesheets/voter.styl
+++ b/client/stylesheets/voter.styl
@@ -281,6 +281,11 @@ body
 		background-color: rgba(255,255,255,0.4)
 		cursor: pointer
 
+//INFO MESSAGE
+.info-message-icon
+	height: 0.8em
+	width: auto
+
 @media screen and (max-width: 480px)
 	#container
 		h1
