fixed silly typo

--- a/client/views/admin/adminMaster.html
+++ b/client/views/admin/adminMaster.html
@@ -7,11 +7,11 @@
                   <ul>
                       <li><h2 class="white-text center">NYU Vote</h2></li>
                       <li class="pure-menu-heading">{{username}}</li>
-                      <li><a href="#" 
+                      <li><a href="#"
                         class="switch-election {{#if isElections}}bold{{/if}}">
                         <span class="email-label-personal"></span>Elections<span
                           class="email-count">({{electionsCount}})</span></a></li>
-                      <li><a href="#" 
+                      <li><a href="#"
                         class="switch-group {{#if isElections}}{{else}}bold{{/if}}">
                        <span class="email-label-travel"></span> Groups <span
                           class="email-count">({{groupsCount}})</span></a></li>
@@ -72,7 +72,7 @@
               <p>
                 Sorry! You are not currently logged in as an admin
                 of NYUVote. Please contact lingliang.zhang (at) nyu.edu
-                if you want like to use NYUVote for your program.
+                if you would like to use NYUVote for your program.
               </p>
             {{/if}}
           {{else}}
