--- a/client/views/admin/adminMaster.html
+++ b/client/views/admin/adminMaster.html
@@ -22,6 +22,7 @@
                           </a>
                         </li>
                       {{/if}}
+                      <li><a href="{{pathFor 'home'}}">Home</a></li>
                       <li><a href="#" class="admin-logout">Logout</a></li>
                   </ul>
               </div>
